--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!D
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+    </head>
+    <body>
+        <ul>
+            <li>录入学生</li>
+            <li>学生管理</li>
+        </ul>
+    </body>
+</html>
