--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li>录入学生</li>
-            <li>学生管理</li>
+            <li>学生查询</li>
         </ul>
     </body>
 </html>
